--- a/src/components/ServiceTask/ServiceTask.css
+++ b/src/components/ServiceTask/ServiceTask.css
@@ -4,6 +4,11 @@
     box-shadow: 5px 5px 10px grey;
 }
 
-.card:hover{
-    cursor: pointer;
+.service-card:hover .service-task-img{
+    -webkit-animation:spin 1s linear infinite;
+    -moz-animation:spin 1s linear infinite;
+    animation:spin 1s linear infinite;
 }
+@-moz-keyframes spin { 100% { -moz-transform: rotate(360deg); } }
+@-webkit-keyframes spin { 100% { -webkit-transform: rotate(360deg); } }
+@keyframes spin { 100% { -webkit-transform: rotate(360deg); transform:rotate(360deg); } }
